@@ -4,7 +4,7 @@ https://go.microsoft.com/fwlink/?LinkID=208121.
 -->
 <Project>
   <PropertyGroup>
-    <ApplicationRevision>1</ApplicationRevision>
+    <ApplicationRevision>2</ApplicationRevision>
     <ApplicationVersion>1.1.45.*</ApplicationVersion>
     <BootstrapperEnabled>False</BootstrapperEnabled>
     <Configuration>Release</Configuration>
@@ -42,7 +42,7 @@ https://go.microsoft.com/fwlink/?LinkID=208121.
     <TargetCulture>en-US</TargetCulture>
     <UseApplicationTrust>True</UseApplicationTrust>
     <CreateDesktopShortcut>True</CreateDesktopShortcut>
-    <History>True|2025-11-16T12:57:09.5707221Z||;True|2025-11-14T06:34:25.4904004-05:00||;True|2025-11-12T22:13:27.2553116-05:00||;True|2025-11-11T11:51:53.4313420-05:00||;True|2025-11-07T08:58:41.1635399-05:00||;True|2025-11-03T07:44:11.9684843-05:00||;True|2025-11-02T11:45:28.0834129-05:00||;True|2025-11-01T09:03:43.3882770-04:00||;True|2025-10-30T17:00:13.5266864-04:00||;True|2025-10-30T16:59:51.0797428-04:00||;True|2025-10-25T10:52:03.1068316-04:00||;True|2025-10-17T09:56:07.5140920-04:00||;True|2025-10-16T08:23:23.3549516-04:00||;True|2025-10-06T10:44:07.7423103-04:00||;True|2025-10-01T06:46:53.7639484-04:00||;</History>
+    <History>True|2025-11-17T21:02:55.7870955Z||;True|2025-11-16T07:57:09.5707221-05:00||;True|2025-11-14T06:34:25.4904004-05:00||;True|2025-11-12T22:13:27.2553116-05:00||;True|2025-11-11T11:51:53.4313420-05:00||;True|2025-11-07T08:58:41.1635399-05:00||;True|2025-11-03T07:44:11.9684843-05:00||;True|2025-11-02T11:45:28.0834129-05:00||;True|2025-11-01T09:03:43.3882770-04:00||;True|2025-10-30T17:00:13.5266864-04:00||;True|2025-10-30T16:59:51.0797428-04:00||;True|2025-10-25T10:52:03.1068316-04:00||;True|2025-10-17T09:56:07.5140920-04:00||;True|2025-10-16T08:23:23.3549516-04:00||;True|2025-10-06T10:44:07.7423103-04:00||;True|2025-10-01T06:46:53.7639484-04:00||;</History>
   </PropertyGroup>
   <ItemGroup>
     <PublishFile Include="Help\AudioMath.pdf">
